# oidc4ci-dart

./: Cargo.toml  Makefile  cbindgen.toml
c/: test.c
cbindings/: Cargo.toml  build.rs
flutter/: README.md  liboidc4ci.dylib  pubspec.yaml
flutter/android/: .project  build.gradle  settings.gradle
flutter/android/src/main/: AndroidManifest.xml
flutter/android/src/main/java/com/spruceid/OIDC4CI/: OIDC4CIPlugin.java
flutter/ios/: oidc4ci.podspec
flutter/ios/Classes/: OIDC4CIPlugin.h  OIDC4CIPlugin.m  mdl.h
flutter/lib/: ffi.dart  oidc4ci.dart
flutter/test/: oidc4ci_test.dart
src/: c.rs  error.rs  lib.rs  runtime.rs
