[package]
name = "oidc4ci"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]

[workspace]
members = [".", "cbindings"]

[dependencies]
ssi = { path = "../ssi" }
oidc4vci-rs = { path = "../oidc4vci-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.17"
lazy_static = "1.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
hex = "0.4"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
